--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "l-4",
   "version": "1.0.0",
   "description": "Food Villa",
- 
   "scripts": {
     "test": "jest",
     "start": "parcel index.html",
@@ -25,7 +24,9 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
